# oj

./: .gitmodules  CMakeLists.txt  README.md  coding.md  problemSolving.md
2014/001/: 001  001.c  Makefile
2014/013/: Q013.sample.1.in
2014/020/: 020  020.c  Q020.sample.1.ans
2014/021/: 21  21.cpp
2014/025/: 025
2014/026/: Q026.sample.1.in
FunnyCalculator/: FunnyCalculator.c  FunnyCalculator.java  FunnyCalculator.sample.1.in
Grader/: AdditionTest.c  grader.c
acm/: README.md
codeforce/250.2/: childHomework.py
codeforce/262.2/: A.py  B.py  C.cpp  C.py  D.py
codeforce/263.2/: 263.2.A.py  263.2.B.py  263.2.C.py
codeforce/265.2/: 265.2.A.py  265.2.B.py  265.2.c
gcj/2008/1A/: MinScalarProduct.py
gcj/apac2014/8.18/Addition/: Addition.py
gcj/apac2014/8.18/Super2048/: B-large.in  B-large.out  B-small-attempt0.in  B-small-attempt0.out  B-small-attempt1.in  B-small-attempt1.out  Super2048.py
hackerrank/: UtopianTree.py
leetcode/: 1.twoSum.py  101.symmetricTree.py  102.binaryTreeLevelOrderTraversal.py  103.binaryTreeZigZagLevelOrderTraversal.py  104.maximumDepthOfBinaryTree.py  105.constructBinaryTreeFromPreorderAndInorderTraversal.py  106.constructBinaryTreeFromInorderAndPostOrder.py  107.binaryTreeLevelOrderTraversalII.py  108.convertSortedArrayToBinarySearchTree.py  11.containerWithMostWater.py  110.balancedBinaryTree.py  111.minimumDepthOfBinaryTree.py  112.pathSum.py  113.pathSumII.py  114.flattenBinaryTreeToLinkedList.py  116.populatingNextRightPointersInEachNode.py  117.populatingNextRightPointersInEachNodeII.py  120.triangle.py  121.bestTimeToBuyAndSellStock.py  124.binaryTreeMaximumPathSum.py  126.wordLadderII.py  128.longestConsecutive.py  129.sumRootToLeafNumbers.py  131.palindromePartitioning.py  132Pattern.json  132Pattern.py  133.cloneGraph.py  136.singleNumber.py  138.copyListWithRandomPointer.cpp  141.linkedListCycle.py  142.linkedListCycleII.py  143.reorderList.py  145.binaryTreePostorderTraversal.py  146.LRUCache.py  147.insertionSortList.py  148.sortList.py  15.threeSum.py  150.EvaluateReversePolishNotation.py  151.reverseWordsInAString.py  154.findMinimumInRotatedSortedArrayII.py  (+672 more)
leetcode/scripts/: rename.sh
leetcode/tests/: _test.cpp  test_tree.cpp  test_trie.cpp
leetcode/tips/: cpp.md  java.md
questions/: CMakeLists.txt  README.md  minimumAdjacentSwapsToGroup1s.cpp  minimumSwapsToSort.cpp  numberOfAdjacentSwapsToSort.cpp
topcoder/2014CT/: 2014CT.250.py
topcoder/srm627.2/: 627.2.250.py
topcoder/srm630.2/: 630.2.250.py  630.2.500.py
trendmicro/2014/012/: Q012.sample.1.ans  Q012.sample.1.in
trendmicro/2014/013/: Q013.sample.1.ans
trendmicro/2014/015/: Q015.c
trendmicro/2014/016/: grader.java
trendmicro/2014/025/: 025.c
trendmicro/2014/026/: 26  26.c
trendmicro/Grader/: AdditionTest.java  AdditionTest.sample.ans  AdditionTest.sample.in  grader  grader.c  grader.cpp  grader.java
